--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
     >
     <title>Vite + React</title>
   </head>
-  <body style="background-color: #C0C0C0;">
+  <body style="background-color: #C0C0C0; font-family:'Pixelated MS Sans Serif'">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
